Added serial connector